--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,9 @@
   "env": {
     "browser": true
   },
+  "parserOptions": {
+    "ecmaVersion": "latest"
+  },
   "extends": [
     "eslint:recommended"
   ]
