--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Демо-страница игры-платформера «Код и Магия»",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint **/*.js"
+    "lint": "eslint **/*.js",
+    "test": "npm run lint"
   },
   "devDependencies": {
     "@eslint/js": "8.57.1",
